JumpScript/tests/baselines/reference/parserSetAccessorWithTypeParameters1.errors.txt
tests/cases/conformance/parser/ecmascript5/Accessors/parserSetAccessorWithTypeParameters1.jump(2,8): error TS1094: An accessor cannot have type parameters.


==== tests/cases/conformance/parser/ecmascript5/Accessors/parserSetAccessorWithTypeParameters1.jump (1 errors) ====
    class C {
       set foo<T>(v) { }
           ~~~
!!! error TS1094: An accessor cannot have type parameters.
    }